# TransportSolver

./: .gitignore  LICENSE  README.md  pyproject.toml  run_cli.py  run_gui.py
src/transporte/: __init__.py  cli.py  core.py  groq.py  gui.py  models.py  solvers.py
