[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transporte"
version = "1.0.0"
description = "Paquete moderno de optimización y resolución de problemas de transporte."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyQt6>=6.4.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
transporte-gui = "transporte.gui:main"
transporte-cli = "transporte.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
